<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fondoAplicacion"
    tools:context=".dispositivosActivity"
    android:orientation="vertical">



    <include
        android:id="@+id/toolbarInstalarDispositivo"
        layout="@layout/barra_principal"/>

    <include layout="@layout/botones_aceptar_cancelar">

    </include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <TextView
            style="@style/textosOpciones"
            android:text="@string/ssid_title" />

        <TextView
            android:id="@+id/ap_ssid_text"
            style="@style/rellenoTextoOpciones"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <TextView
            style="@style/textosOpciones"
            android:text="@string/bssid_title" />

        <TextView
            android:id="@+id/ap_bssid_text"
            style="@style/rellenoTextoOpciones"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textosOpciones"
            android:text="@string/password" />

        <EditText
            android:id="@+id/ap_password_edit"
            style="@style/rellenoTextoOpciones"
            android:maxLength="64"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textosOpciones"
            android:text="@string/nombreDispositivo" />

        <EditText
            android:id="@+id/editNombreNuevoDispositivo"
            style="@style/rellenoTextoOpciones"
            android:maxLength="25"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_count_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/device_count_edit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:inputType="number"
            android:visibility="gone"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/package_mode_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/package_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/package_broadcast" />

        <RadioButton
            android:id="@+id/package_multicast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/package_multicast" />
    </RadioGroup>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/holo_red_dark"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"

        android:background="@null"
        android:src="@drawable/smartconfig"/>



    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="10dp"/>






</LinearLayout>
