<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="#234562"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagenAplicacion"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/icono_aplicacion"
        android:layout_marginLeft="24dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="14sp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:gravity="left"
        android:paddingBottom="4dp"
        android:id="@+id/textoAplicacion"
        android:layout_below="@id/imagenAplicacion"
        android:layout_alignStart="@+id/imagenAplicacion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:id="@+id/autor"
        android:gravity="left"
        android:layout_marginBottom="4dp"
        android:textSize="14sp"
        android:textColor="#fff"
        android:layout_below="@id/textoAplicacion"
        android:layout_alignStart="@id/imagenAplicacion"
/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="#fff"
        android:layout_below="@id/autor"
        android:layout_alignStart="@id/imagenAplicacion"/>


</RelativeLayout>
