<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/esquinas"
    android:orientation="horizontal"
    android:weightSum="13"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <ImageView
        android:id="@+id/iconoInterruptor"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:src="@drawable/interruptor_encendido"
        android:contentDescription="@string/rele"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconoBorrarInterruptor"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/delete"
            android:contentDescription="@string/borrarDispositivo">

        </ImageView>

        <ProgressBar
            android:id="@+id/progressInterruptor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            android:scaleX="0.7"
            android:scaleY="0.7">

        </ProgressBar>


    </LinearLayout>

    <TextView
        android:id="@+id/nombreInterruptor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        style="@style/nombreDispositivo"
        android:layout_weight="7"
        android:layout_gravity="left"
        android:gravity="center"
        android:text="hola"/>

    <ImageView
        android:id="@+id/iconoEstadoConexionInterruptor"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/bkconectado"
        android:contentDescription="@string/broker"
        android:foregroundGravity="right" />

</LinearLayout>