<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dispositivosActivity"
    android:orientation="vertical"
    android:background="#25a0af">




    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#234562"
        app:title="@string/AnadirDispositivo"
        app:titleTextColor="#FFFFFF"
        app:navigationIcon="@drawable/anadir_dispositivo">

    </android.support.v7.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textNombreDispositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nombre:"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editnombreDispositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF"
            />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textDispositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idDispositivo"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editDispositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPublicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topicPublicacion"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editPublicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textSubscripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topicSubscripcion"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editSubscripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>



    <Button
        android:id="@+id/botonGuardarDispositivo"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/aceptar"
        android:background="#678A9A"
        android:textColor="#FFFFFF"/>


</LinearLayout>